--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">GoogleMaps</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">GoogleMapsApp</string>
 </resources>
